[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "17.0.0", features = ["async"] }
rayon = "1.5.0"
wasmtime-wasi = "17.0.0"
futures = "0.3.30"
anyhow = "1.0.79"

