[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
anyhow = "1.0.79"
wasmtime-wasi = { version = "19.0.0", path = "../wasmtime-colorguard/crates/wasi", features = ["tokio"] }
wasmtime = { version = "19.0.0", path = "../wasmtime-colorguard/crates/wasmtime", features = ["async"] }
tokio = { version = "1.36.0", features = ["time"] }

